--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -1,4 +1,28 @@
+
 Vagrant::Config.run do |config|
-  config.vm.box = "puppet_debian"
-  config.vm.forward_port 80, 3000
+  config.vm.box = "lucid32"
+  config.vm.forward_port 80, 4567
+
+  # Enable provisioning with Puppet stand alone.  Puppet manifests
+  # are contained in a directory path relative to this Vagrantfile.
+  # You will need to create the manifests directory and a manifest in
+  # the file debian_puppet.pp in the manifests_path directory.
+  #
+  # An example Puppet manifest to provision the message of the day:
+  #
+  # # group { "puppet":
+  # #   ensure => "present",
+  # # }
+  # #
+  # # File { owner => 0, group => 0, mode => 0644 }
+  # #
+  # # file { '/etc/motd':
+  # #   content => "Welcome to your Vagrant-built virtual machine!
+  # #               Managed by Puppet.\n"
+  # # }
+  #
+   config.vm.provision :puppet do |puppet|
+     puppet.manifests_path = "manifests"
+     puppet.manifest_file  = "site.pp"
+   end
 end
