--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -1,7 +1,19 @@
+Vagrant.configure("2") do |config|
 
-Vagrant::Config.run do |config|
-  config.vm.box = "lucid32"
-  config.vm.forward_port 80, 4567
+# Box settings
+  config.vm.box_url ="http://files.vagrantup.com/precise32.box"
+  config.vm.box = "precise32"
+
+# Guest settings
+  config.vm.guest = "linux"
+  config.vm.hostname = "stage.kiveda.de"
+
+# Network settings
+  config.vm.network :forwarded_port, host: 8080, guest: 80
+
+# Synced folders
+  config.vm.synced_folder "data/www/stage.kiveda.de/public", "/data/www/stage.kiveda.de/public"
+  config.vm.synced_folder "templates", "/tmp/vagrant-puppet/templates"
 
   # Enable provisioning with Puppet stand alone.  Puppet manifests
   # are contained in a directory path relative to this Vagrantfile.
@@ -22,7 +34,11 @@ Vagrant::Config.run do |config|
   # # }
   #
    config.vm.provision :puppet do |puppet|
+#    puppet.facter         = { "docroot" => "stage.kiveda.de"}
+     puppet.options        = " --verbose --debug --no-daemonize"
+     puppet.options        = [ "--templatedir", "/tmp/vagrant-puppet/templates" ]
      puppet.manifests_path = "manifests"
+     puppet.module_path    = "modules"
      puppet.manifest_file  = "site.pp"
    end
 end
