--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -15,29 +15,15 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "data/www/www.example.de/public", "/data/www/www.example.de/public"
   config.vm.synced_folder "templates", "/tmp/vagrant-puppet/templates"
 
-  # Enable provisioning with Puppet stand alone.  Puppet manifests
-  # are contained in a directory path relative to this Vagrantfile.
-  # You will need to create the manifests directory and a manifest in
-  # the file debian_puppet.pp in the manifests_path directory.
-  #
-  # An example Puppet manifest to provision the message of the day:
-  #
-  # # group { "puppet":
-  # #   ensure => "present",
-  # # }
-  # #
-  # # File { owner => 0, group => 0, mode => 0644 }
-  # #
-  # # file { '/etc/motd':
-  # #   content => "Welcome to your Vagrant-built virtual machine!
-  # #               Managed by Puppet.\n"
-  # # }
-  #
-   config.vm.provision :puppet do |puppet|
-     puppet.options        = " --verbose --debug --no-daemonize"
-     puppet.options        = [ "--templatedir", "/tmp/vagrant-puppet/templates" ]
-     puppet.manifests_path = "manifests"
-     puppet.module_path    = "modules"
-     puppet.manifest_file  = "site.pp"
-   end
+# Provisioning with puppet
+  config.vm.provision :puppet do |puppet|
+    puppet.options        = " --verbose --debug --no-daemonize"
+    puppet.options        = [ "--templatedir", "/tmp/vagrant-puppet/templates" ]
+    puppet.manifests_path = "manifests"
+    puppet.module_path    = "modules"
+    puppet.manifest_file  = "site.pp"
+  end
+
+# Provisioning with script
+  config.vm.provision :shell, :path => "oxid_bootstrap.sh"
 end
