--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -6,13 +6,14 @@ Vagrant.configure("2") do |config|
 
 # Guest settings
   config.vm.guest = "linux"
-  config.vm.hostname = "www.example.de"
+  config.vm.hostname = "www.oxiddemo.de"
 
 # Network settings
   config.vm.network :forwarded_port, host: 8080, guest: 80
+  config.vm.network :forwarded_port, host: 4443, guest: 443
 
 # Synced folders
-  config.vm.synced_folder "data/www/www.example.de/public", "/data/www/www.example.de/public"
+  config.vm.synced_folder "data/www/www.oxiddemo.de/public", "/data/www/www.oxiddemo.de/public"
   config.vm.synced_folder "templates", "/tmp/vagrant-puppet/templates"
 
 # Provisioning with puppet
