--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
 
 # Synced folders
   config.vm.synced_folder "templates", "/tmp/vagrant-puppet/templates"
+  config.vm.synced_folder "oxid_config", "/tmp/oxid_config"
 
 # Provisioning with puppet
   config.vm.provision :puppet do |puppet|
