--- a/oxid_test/oxid_config/oxid_demo.cfg
+++ b/oxid_test/oxid_config/oxid_demo.cfg
@@ -1,8 +1,7 @@
-rootpw=secret
-mysql_rootpw=secret
-oxidadmin=secret
+ROOTPW=secret
+MYSQL_ROOTPW=secret
+OXIDADMIN=secret
 
-
-oxid_admin_user=demo@oxiddemo.de
-oxid_db_user=oxid_demo_user
-oxid_db_user_pw=secret
+OXID_ADMIN_USER=demo@oxiddemo.de
+OXID_DB_USER=oxid_demo_user
+OXID_DB_USER_PW=secret
