changes on oxid_bootstrap.sh and oxid_demo.cfg

--- a/oxid_test/oxid_config/oxid_demo.cfg
+++ b/oxid_test/oxid_config/oxid_demo.cfg
@@ -3,6 +3,9 @@ MYSQL_ROOTPW=secret
 OXIDADMIN=secret
 
 OXID_ADMIN_USER=demo@oxiddemo.de
+OXID_ADMIN_PW=secret
+
+
 OXID_DB_USER=oxid_demo_user
 OXID_DB_USER_PW=secret
 
