cleaned up puppet, removed php5-mods and templates directory, added README

--- a/oxid_test/oxid_config/oxid_demo.cfg
+++ b/oxid_test/oxid_config/oxid_demo.cfg
@@ -1,12 +1,18 @@
-ROOTPW=secret
-MYSQL_ROOTPW=secret
-OXIDADMIN=secret
+# This file is used to configure passwords and users of the Oxid demo installation
 
-OXID_ADMIN_USER=demo@oxiddemo.de
+# Password of the root user
+ROOTPW=secret
+
+# Password of the mysql user
+MYSQL_ROOTPW=secret
+
+# Oxid backend admin user and password
+OXID_ADMIN_USER=admin@oxiddemo.de
 OXID_ADMIN_PW=secret
 
-
+# Oxid database user and password
 OXID_DB_USER=oxid_demo_user
 OXID_DB_USER_PW=secret
 
+# Oxid database
 OXID_DB=oxid_demo
