--- a/oxid_test/Vagrantfile
+++ b/oxid_test/Vagrantfile
@@ -13,13 +13,13 @@ Vagrant.configure("2") do |config|
   config.vm.network :forwarded_port, host: 4443, guest: 443
 
 # Synced folders
-  config.vm.synced_folder "templates", "/tmp/vagrant-puppet/templates"
   config.vm.synced_folder "oxid_config", "/tmp/oxid_config"
 
 # Provisioning with puppet
   config.vm.provision :puppet do |puppet|
     puppet.options        = " --verbose --debug --no-daemonize"
     puppet.manifests_path = "manifests"
+    puppet.module_path    = "modules"
     puppet.manifest_file  = "site.pp"
   end
 
